# lnrent

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  SPEC.md  flake.nix
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  fedimint-live.yml
clients/cli/: Cargo.toml
clients/cli/examples/: localrelay.rs
clients/cli/src/: main.rs  relay.rs
clients/cli/tests/: argv_contract.rs  buyer_flow.rs  money_gate.rs
clients/core/: Cargo.toml
clients/core/src/: client.rs  error.rs  lib.rs  relay.rs
clients/web/: Cargo.toml  README.md
clients/web/e2e/: run.sh  web-buyer-e2e.mjs
clients/web/src/: clock.rs  lib.rs  relay.rs  signer.rs
clients/web/static/: app.js  index.html  style.css
daemon/: Cargo.toml
daemon/src/: alerts.rs  backends.rs  backup.rs  capture.rs  clock.rs  config.rs  domain.rs  fedimint_backend.rs  fedimint_paths.rs  identity.rs  ipc.rs  ledger.rs  lib.rs  lnv2_backend.rs  main.rs  nostr_engine.rs  op_dispatch.rs  order_intake.rs  preflight.rs  provision.rs  recipe.rs  reconcile.rs  refund.rs  refund_resolver.rs  relay_status.rs  reservation.rs  resume.rs  runner.rs  store.rs  supervisor.rs  sweep.rs  teardown.rs
daemon/src/lnv2_backend/: tests.rs
daemon/tests/: backup.rs  bootstrap_cli.rs  e2e_money_path.rs  fedimint_live.rs  fedimint_real_payment.rs  lnv2_live.rs  nostr_engine.rs  operator_money_cli.rs  preflight_cli.rs  supervisor.rs
docs/: go-live.md
docs/adr/: 0001-daemon-is-sole-writer.md  0002-recipes-are-trusted-code.md  0003-capture-then-refund-no-hold-invoices.md  0004-operator-identity-bip39-derived-keys.md  0005-prepaid-expiry-subscriptions.md  0006-listing-authenticity-operator-manifest.md  0007-vm-security-tiers.md  0008-vm-reachability-three-planes-iroh-first.md  0009-durable-order-delivery-state-machine.md  0010-value-plane-vs-hosting-plane.md  0011-attestation-based-reputation.md  0012-fedimint-primary-receive-backend.md  0013-recipe-declared-management-operations.md  0014-agent-native-via-complete-cli.md  0015-fedimint-client-rocksdb-backend.md  0016-ledger-authorizes-balance-reconciles.md  0017-pay-recovery-oplog-not-repay-oracle.md  0018-payment-backends-lnv2-phoenixd-retire-lnv1.md  0019-refund-liability-is-the-net-wallet-credit.md
docs/security/: vm-deployment-guidelines.md  vm-networking-reachability-guidelines.md
docs/specs/: cleanup-cuts.md  downtime-credit-suspended.md  gate0-abuse-resistance.md  gate1-alerting-operability.md  gate1-operator-sweep.md  hook-env-hygiene.md  nostr-engine-drain.md  operator-money-cli.md  production-readiness.md  refund-money-path-hardening.md  refund-provisioning-hardening.md  resume-hook-driver.md  sub-cancel.md  web-wasm-buyer.md
recipes/do-vps/: destroy  healthcheck  preflight  provision  recipe.toml  resume  suspend
recipes/do-vps/ops/: restart  status
recipes/dummy/: destroy  provision  recipe.toml  resume  suspend
recipes/dummy/ops/: restart  status
recipes/wireguard/: destroy  healthcheck  provision  recipe.toml  resume  suspend
recipes/wireguard/ops/: get-config  restart  status
scripts/: live-fed-e2e.sh
wire/: Cargo.toml
wire/src/: dm.rs  error.rs  lib.rs  listing.rs  wrap.rs
wire/tests/: roundtrip.rs
