[package]
name = "lnrentd"
version = "0.1.0"
edition = "2021"
description = "lnrent control plane (daemon) and operator CLI"

[[bin]]
name = "lnrentd"
path = "src/main.rs"

[[bin]]
name = "lnrent"
path = "src/bin/lnrent.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util", "net", "signal"] }
# The shared wire codec (lnrent-7fp.19): DM types, gift-wrap, 30402 listings. The Nostr engine
# is built ON it and must NOT re-implement those.
lnrent-wire = { path = "../wire" }
# rust-nostr high-level client for relay publish/subscribe. Pinned to the SAME nostr 0.44 the
# wire crate uses, so `Keys`/`Event`/`Msg` types unify across the codec and the transport.
nostr-sdk = "0.44"
# NIP-06 account-0 key derivation from the operator BIP39 seed (lnrent-7fp.16, ADR-0004). This is
# the SAME `nostr` 0.44 nostr-sdk/lnrent-wire already use; we only add the `nip06` feature here for
# `Keys::from_mnemonic`. The `nip06` feature also re-exports `bip39`, which we use to compute the
# raw seed feeding the Fedimint HKDF — so that seed is byte-identical to the NIP-06 derivation.
nostr = { version = "0.44", features = ["nip06"] }
# Enable bip39's `zeroize` feature on the SAME bip39 2.x crate `nostr`'s `nip06` re-exports (Cargo
# unifies it to one instance), so the intermediate decoded `Mnemonic` (word indices / entropy)
# zeroizes on drop — matching the seed / mnemonic / root-secret wiping hygiene in identity.rs (§13).
# We don't import this directly; declaring the dep just flips the feature on `nostr::bip39::Mnemonic`.
bip39 = { version = "2.2", features = ["zeroize"] }
# HKDF-SHA256 derivation of the Fedimint client root secret from the same seed, domain-separated by
# the fixed info string `lnrent:fedimint:v1` so the Nostr and Fedimint key spaces can't collide
# (ADR-0004/0012, SPEC.md §4.6). Only the secret is derived here; the real client is bead .4.
hkdf = "0.12"
sha2 = "0.10"
# `O_NOFOLLOW` when reopening persisted secret files (operator.seed / fedimint.json), so a
# pre-existing data dir can't point those secrets outside the data-dir backup/perms boundary.
libc = "0.2"
# Best-effort zeroization of in-memory secret residue (the BIP39 seed copy, the mnemonic string,
# and the Fedimint root-secret buffer) on drop — the seed/keys are never logged (§13) and this
# closes the freed-memory residue too (lnrent-7fp.16).
zeroize = "1"
# `async fn` in the injected handler/outbound trait objects (object-safe via this macro).
async-trait = "0.1"

# --- Real Fedimint backend (lnrent-7fp.4), behind the `fedimint` feature (default OFF) -----------
# Pinned to UPSTREAM fedimint v0.11.1 via the local on-disk checkout (file:// git tag — no GitHub
# re-clone, HEAD worktree untouched). Daemon-only (a 2nd DB engine, RocksDB C++; glibc-dynamic,
# ADR-0015); never compiled into the wasm buyer. All optional so mock builds don't pull this tree.
fedimint-client = { git = "file:///home/master/p/fedimint", tag = "v0.11.1", optional = true }
fedimint-client-module = { git = "file:///home/master/p/fedimint", tag = "v0.11.1", optional = true }
fedimint-core = { git = "file:///home/master/p/fedimint", tag = "v0.11.1", optional = true }
fedimint-rocksdb = { git = "file:///home/master/p/fedimint", tag = "v0.11.1", optional = true }
fedimint-derive-secret = { git = "file:///home/master/p/fedimint", tag = "v0.11.1", optional = true }
fedimint-connectors = { git = "file:///home/master/p/fedimint", tag = "v0.11.1", optional = true }
fedimint-ln-client = { git = "file:///home/master/p/fedimint", tag = "v0.11.1", optional = true }
fedimint-ln-common = { git = "file:///home/master/p/fedimint", tag = "v0.11.1", optional = true }
fedimint-mint-client = { git = "file:///home/master/p/fedimint", tag = "v0.11.1", optional = true }
fedimint-wallet-client = { git = "file:///home/master/p/fedimint", tag = "v0.11.1", optional = true }
# StreamExt::next on the fedimint settlement subscription streams (receive/pay state machines).
futures-util = { version = "0.3", optional = true }

[features]
# Compile the real Fedimint backend (daemon/src/fedimint_backend.rs). OFF by default so the M1a mock
# money path + CI build without the heavy fedimint/rocksdb tree or a live federation.
fedimint = [
    "dep:fedimint-client",
    "dep:fedimint-client-module",
    "dep:fedimint-core",
    "dep:fedimint-rocksdb",
    "dep:fedimint-derive-secret",
    "dep:fedimint-connectors",
    "dep:fedimint-ln-client",
    "dep:fedimint-ln-common",
    "dep:fedimint-mint-client",
    "dep:fedimint-wallet-client",
    "dep:futures-util",
]

[dev-dependencies]
# In-process local relay for the Nostr-engine integration tests (publish/subscribe round-trips
# over a real relay, no public relay). Pinned to the same nostr 0.44.
nostr-relay-builder = "0.44"
