[package]
name = "lnrentd"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
description = "lnrent control plane (daemon) and operator CLI"

[[bin]]
name = "lnrentd"
path = "src/main.rs"

[[bin]]
name = "lnrent"
path = "src/bin/lnrent.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util", "net", "signal"] }
# Engine-owned graceful shutdown tracking for accepted inbound Nostr work.
tokio-util = { version = "0.7", features = ["rt"] }
# The shared wire codec (lnrent-7fp.19): DM types, gift-wrap, 30402 listings. The Nostr engine
# is built ON it and must NOT re-implement those.
lnrent-wire = { path = "../wire" }
# rust-nostr high-level client for relay publish/subscribe. Pinned to the SAME nostr 0.44 the
# wire crate uses, so `Keys`/`Event`/`Msg` types unify across the codec and the transport.
nostr-sdk = "0.44"
# NIP-06 account-0 key derivation from the operator BIP39 seed (lnrent-7fp.16, ADR-0004). This is
# the SAME `nostr` 0.44 nostr-sdk/lnrent-wire already use; we only add the `nip06` feature here for
# `Keys::from_mnemonic`. The `nip06` feature also re-exports `bip39`, which we use to compute the
# raw seed feeding the Fedimint HKDF — so that seed is byte-identical to the NIP-06 derivation.
nostr = { version = "0.44", features = ["nip06"] }
# Enable bip39's `zeroize` feature on the SAME bip39 2.x crate `nostr`'s `nip06` re-exports (Cargo
# unifies it to one instance), so the intermediate decoded `Mnemonic` (word indices / entropy)
# zeroizes on drop — matching the seed / mnemonic / root-secret wiping hygiene in identity.rs (§13).
# We don't import this directly; declaring the dep just flips the feature on `nostr::bip39::Mnemonic`.
bip39 = { version = "2.2", features = ["zeroize"] }
# HKDF-SHA256 derivation of the Fedimint client root secret from the same seed, domain-separated by
# the fixed info string `lnrent:fedimint:v1` so the Nostr and Fedimint key spaces can't collide
# (ADR-0004/0012, SPEC.md §4.6). Only the secret is derived here; the real client is bead .4.
hkdf = "0.12"
sha2 = "0.10"
# `O_NOFOLLOW` when reopening persisted secret files (operator.seed / fedimint.json), so a
# pre-existing data dir can't point those secrets outside the data-dir backup/perms boundary.
libc = "0.2"
# Best-effort zeroization of in-memory secret residue (the BIP39 seed copy, the mnemonic string,
# and the Fedimint root-secret buffer) on drop — the seed/keys are never logged (§13) and this
# closes the freed-memory residue too (lnrent-7fp.16). Also wraps the OPTIONAL backup passphrase
# (lnrent-y4m.6) so it wipes after the encrypt/decrypt call.
zeroize = "1"
# OPTIONAL passphrase-encrypted backup mode (lnrent-y4m.6): the audited Rust `age` crate provides the
# scrypt passphrase KDF + ChaCha20-Poly1305 AEAD + container format so we NEVER hand-roll crypto.
# age's `default = []` (verified in age-0.11.3's manifest), so we pull NONE of its opt-in features
# (no ssh/plugin/cli/armor). CONSCIOUS supply-chain sign-off: even with an empty feature set, age
# unconditionally pulls a sizable MANDATORY transitive tree — the i18n-embed / i18n-embed-fl /
# rust-embed localization stack for its error strings, plus x25519-dalek for the recipient (X25519)
# format we don't use (this passphrase mode exercises only scrypt + ChaCha20-Poly1305). Those deps are
# NOT feature-gated in age's manifest, so `default-features = false` can't trim them. We accept that
# footprint deliberately: for a fund-controlling seed, an audited crypto implementation beats a
# hand-rolled cipher/KDF, which the task forbids anyway.
age = "0.11"
# Bundle the sensitive set (sqlite snapshot + seed + fedimint config/dir) into ONE tar stream that is
# fed through the `age` writer/reader — so the encrypted backup is a single self-contained artifact
# and we stream (never buffer the whole ecash client.db in memory).
tar = "0.4"
# `async fn` in the injected handler/outbound trait objects (object-safe via this macro).
async-trait = "0.1"

# --- Refund-dest RESOLVER (lnrent-ug8): LN-address/LNURL -> bolt11 at refund time ----------------
# Backend-AGNOSTIC (NOT behind the `fedimint` feature) so refunds resolve for any PaymentBackend.
# HTTP client over rustls with the `ring` provider — reqwest's `rustls-tls` selects ring + webpki
# roots, NOT aws-lc, so we avoid the aws-lc-sys C build; default-features off drops the native-tls
# default. The client also calls `.use_rustls_tls()` so feature-unification can never route it to
# native-tls.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# bech32 decode of `lnurl1...` (LUD-01). Same 0.11 line lightning-invoice uses (Cargo unifies it).
bech32 = "0.11"
# Parse + validate the lnurlp / callback URLs (scheme + host for the SSRF guard).
url = "2"
# Parse the resolved bolt11 (amount_msat, description_hash, expiry) at refund time. Default build, so
# the resolver is usable without the `fedimint` feature.
lightning-invoice = { version = "0.33", features = ["std"] }
# Hex-compare the bolt11 description_hash against sha256(metadata) (sha2 is already a dep above).
hex = "0.4"

# --- Real Fedimint backend (lnrent-7fp.4), behind the `fedimint` feature (DEFAULT ON; build with --no-default-features for the mock-only path) ---
# Pinned to UPSTREAM fedimint v0.11.1 (tag commit 42ac7c9a — identical on the local checkout and on
# github.com/fedimint/fedimint). A public git source so the repo is reproducible off this box and CI
# can build the fedimint money path. Daemon-only (a 2nd DB engine, RocksDB C++; glibc-dynamic,
# ADR-0015); never compiled into the wasm buyer. All optional so mock builds don't pull this tree.
fedimint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.11.1", optional = true }
fedimint-core = { git = "https://github.com/fedimint/fedimint", tag = "v0.11.1", optional = true }
# The federation-API trait (`IGlobalFederationApi`), for the lnrent-urw.4 liveness probe: a cheap
# `session_count()` guardian round-trip. Not re-exported by fedimint-client, so a direct dep.
fedimint-api-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.11.1", optional = true }
fedimint-rocksdb = { git = "https://github.com/fedimint/fedimint", tag = "v0.11.1", optional = true }
fedimint-derive-secret = { git = "https://github.com/fedimint/fedimint", tag = "v0.11.1", optional = true }
fedimint-connectors = { git = "https://github.com/fedimint/fedimint", tag = "v0.11.1", optional = true }
fedimint-ln-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.11.1", optional = true }
fedimint-ln-common = { git = "https://github.com/fedimint/fedimint", tag = "v0.11.1", optional = true }
fedimint-mint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.11.1", optional = true }
fedimint-wallet-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.11.1", optional = true }
# StreamExt::next on the fedimint settlement subscription streams (receive/pay state machines).
futures-util = { version = "0.3", optional = true }

[features]
# Fedimint is ON by default (alpha/beta dogfood — the real ecash money path). Build with
# --no-default-features for the mock-only M1a path (no fedimint/rocksdb tree, no live federation).
default = ["fedimint"]
# Compile the real Fedimint backend (daemon/src/fedimint_backend.rs).
fedimint = [
    "dep:fedimint-client",
    "dep:fedimint-core",
    "dep:fedimint-api-client",
    "dep:fedimint-rocksdb",
    "dep:fedimint-derive-secret",
    "dep:fedimint-connectors",
    "dep:fedimint-ln-client",
    "dep:fedimint-ln-common",
    "dep:fedimint-mint-client",
    "dep:fedimint-wallet-client",
    "dep:futures-util",
]

[dev-dependencies]
# In-process local relay for the Nostr-engine integration tests (publish/subscribe round-trips
# over a real relay, no public relay). Pinned to the same nostr 0.44.
nostr-relay-builder = "0.44"
# Mint a valid signed bolt11 in the refund-resolver tests (LNURL-pay happy path): secp256k1
# recoverable signing + sha256 hashes. Already compiled as a `lightning-invoice` dependency; the
# dev-dep just makes the InvoiceBuilder usable from tests. Default features include `secp-recovery`.
bitcoin = "0.32"
# Directly DELETE a fedimint_pay index row in the fedimint_live oplog-recovery test, to simulate the
# pay() crash window (op committed, local row not yet upserted). Same version as the daemon dep.
rusqlite = { version = "0.31", features = ["bundled"] }
