[package]
name = "lnrent-buyer-cli"
version = "0.1.0"
edition = "2021"
description = "lnrent buyer CLI (agent-grade; --json, non-interactive, deterministic exit codes; never pays)"

[[bin]]
name = "lnrent-buyer"
path = "src/main.rs"

[dependencies]
lnrent-buyer-core = { path = "../core" }
# The shared codec: types the CLI renders (ParsedListing, OrderInvoice, …) + LISTING_KIND.
lnrent-wire = { path = "../../wire" }
# rust-nostr high-level client for the native Relay impl (connect/publish/fetch/subscribe). Pinned
# to the same nostr 0.44 the wire crate uses, so Keys/Event/PublicKey unify across codec + transport.
nostr-sdk = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# Implement buyer-core's object-safe async Relay / GiftWrapStream traits natively.
async-trait = "0.1"

[dev-dependencies]
# The integration test boots the operator daemon's Supervisor over an in-process relay (TEST ONLY).
lnrentd = { path = "../../daemon" }
nostr-relay-builder = "0.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
