[package]
name = "lnrent-buyer-web"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen browser host skeleton for lnrent buyer-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lnrent-buyer-core = { path = "../core" }
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "=0.3.98"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]
