[package]
name = "lnrent-buyer-web"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
description = "wasm-bindgen browser host skeleton for lnrent buyer-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lnrent-buyer-core = { path = "../core" }
nostr = { version = "0.44", features = ["nip44", "nip59"] }
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "=0.3.98"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
gloo-net = { version = "0.6", default-features = false, features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]
